--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="phone">
+        <h1>Please Open the website on <br>
+        <u>Desktop</u> only</h1>
+    </div>
+    <div class="full">
     <div class="taskbar">
         <img class="win"src="WindowsLogo.png" alt="">
         <img class="searched" src="SearchLogo.png" alt="">
@@ -31,6 +36,7 @@
     </div>
     <div class="doub">
         <img src="/Windows 11/chromeicon.png" alt="">
+    </div>
     </div>
 </body>
 <script src="script.js"></script>
